# seaorm_clean_architecture_example

./: .gitignore  Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: domain.rs  infra.rs  main.rs
src/domain/: person.rs  repository.rs  transaction.rs
src/infra/: entity_mapper.rs  person_repository.rs  repository.rs  seaorm_connection.rs  transaction.rs
src/infra/entities/: mod.rs  person.rs  prelude.rs
