[package]
name = "seaorm_clean_architecture_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
futures = "0.3.21"
futures-util = "0.3.28"
sea-orm = { version = "^0.9.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
tokio = {version = "1.27.0", features = ["full"]}
